# gitout

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CI_CD_MIGRATION_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.qdrant  METRICS.md  METRICS_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASING.md  RETRY_TESTING_SUMMARY.md  build.gradle  docker-entrypoint.sh  pyproject.toml  settings.gradle
.claude/: settings.local.json
.github/: CICD_SETUP.md  dependabot.yml  renovate.json5
.github/workflows/: build.yaml  build.yml  build_and_publish.yml  codeql.yaml  docker-publish.yml  docker_publish.yml  publish-ghcr.yml  publish.yaml  python.yaml  security_audit.yml
automation/: README.md
automation/src/obsidian_vault/: log_analyzer.py
automation/tests/: test_log_analyzer.py
dev/: README.md  config.local.toml  docker-compose.local.yml
docs/plans/: 2026-03-22-semantic-search-design.md
gitout/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  cron.py  engine.py  gemini_key.py  github_client.py  lfs.py  maintenance.py  retry.py  state_tracker.py  telegram.py
gitout/search/: __init__.py  gemini.py  index_service.py  qdrant.py  readme_extractor.py
gradle/: libs.versions.toml
python/: .gitignore  README.md  pyproject.toml
python/gitout/: circuit_breaker.py  cli.py  config.py  engine.py  errors.py  failure_tracker.py  git_commands.py  github.py  health_check.py  retry.py  state_tracker.py  telegram.py
python/gitout/search/: exceptions.py
python/parity/: README.md  parity_check.py
python/tests/: conftest.py  helpers.py  test_benchmark.py  test_cli.py  test_config.py  test_engine.py  test_error_category.py  test_failure_tracker.py  test_git_commands.py  test_github.py  test_health_check.py  test_imports.py  test_maintenance.py  test_retry.py  test_state_tracker.py  test_telegram.py
python/tests/fixtures/github/: user_repos_pages.json
python/tests/search/: test_index_service.py
root/app/: sync.sh
root/etc/cont-init.d/: 10-adduser.sh  20-cron.sh
root/etc/services.d/cron/: run
scripts/: prune-to-single-branch.sh  repair-single-branch.sh
src/: args.rs  clone_or_fetch_bare_tests.rs  config.rs  github.rs  main.rs
src/main/graphql/: GitHub.graphql
src/main/kotlin/com/jakewharton/gitout/: Benchmark.kt  Config.kt  Engine.kt  ErrorCategory.kt  FailureTracker.kt  GeminiApiKeyResolver.kt  GitHub.kt  HealthCheckService.kt  IndexCommand.kt  LfsSupport.kt  Logger.kt  RepositoryMaintenance.kt  RepositoryStateTracker.kt  RetryPolicy.kt  SearchCommand.kt  TelegramNotificationService.kt  TelegramUserIdListSerializer.kt  main.kt  util.kt
src/main/kotlin/com/jakewharton/gitout/search/: GeminiEmbeddingClient.kt  QdrantClient.kt  ReadmeExtractor.kt  SearchException.kt  SearchIndexService.kt
src/test/kotlin/com/jakewharton/gitout/: CircuitBreakerTest.kt  CliDispatchTest.kt  ConfigTest.kt  EngineIntegrationTest.kt  EngineTest.kt  ErrorCategoryTest.kt  HealthCheckTest.kt  IntegrationTest.kt  LfsSupportTest.kt  ParallelSyncTest.kt  RepositoryMaintenanceTest.kt  RepositoryStateTrackerTest.kt  RetryPolicyTest.kt  TelegramNotificationServiceTest.kt  TelegramNotificationTest.kt
src/test/kotlin/com/jakewharton/gitout/search/: GeminiEmbeddingClientTest.kt  QdrantClientTest.kt  ReadmeExtractorTest.kt  SearchIndexServiceTest.kt
src/test/resources/: README.md
src/test/resources/fixtures/: full-config.toml  parallel-config.toml  ssl-disabled-config.toml
tests/: cli_tests.rs  test_circuit_breaker.py  test_cli.py  test_config.py  test_cron.py  test_engine.py  test_error_category.py  test_github_client.py  test_lfs.py  test_maintenance.py  test_preflight.py  test_retry.py  test_telegram.py
tests/fixtures/config/: parse_cases.json
tests/search/: test_gemini.py  test_qdrant.py  test_readme_extractor.py
