[package]
name = "gitout"
version = "0.2.0"
authors = ["Jake Wharton <gitout@jakewharton.com>"]
edition = "2018"
description = "A command-line tool to automatically backup Git repositories from GitHub or anywhere"
readme = "README.md"
repository = "https://github.com/JakeWharton/gitout/"
license = "MIT"
keywords = ["git", "github", "backup"]
categories = ["command-line-utilities"]
exclude = [".github/**"]

[dependencies]
git2 = "0.20"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
graphql_client = "0.14"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
