[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitout"
version = "0.4.0-fork-dev"
description = "Automatically back up Git repositories from GitHub or any git host (Python port of the Kotlin gitout)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "gql[httpx]>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
gitout = "gitout.cli:app"

[tool.setuptools.packages.find]
include = ["gitout*"]

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
# pythonpath = ["."] lets `import gitout` resolve without an editable install,
# so the characterization suite runs with a bare `python -m pytest` from python/.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "characterization: behavior captured from the Kotlin implementation; the Python port must satisfy it.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
